2000-12-05  Jeffrey Stedfast  <fejj@helixcode.com>

	* README: Updated with more RFCs, etc.

	* rfc/* Added a bunch more rfcs of interest.

2000-12-04  Jeffrey Stedfast  <fejj@helixcode.com>

	* test-mime.c: Added test code for the address parser.

	* gmime-utils.c (g_mime_utils_quoted_encode_step): Updated. No
	longer need to special-case whitespace chars as they have been put
	into the gmime_special_table (a while ago).

2000-12-02  Jeffrey Stedfast  <fejj@helixcode.com>

	* Makefile.am: Install gmime.m4

	* gmime.m4: Added.

2000-12-02  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_foreach): New convenience function for
	manipulating each subpart of a mime part.

	* gmime-message.c (g_mime_message_foreach_part): New convenience
	function for manipulating all mime parts of a message.

2000-12-02  Jeffrey Stedfast  <fejj@helixcode.com>

	* doc/sgml/*:
	* doc/html/*: Updated.

	* doc/gmime-sections.txt: Add g_mime_message_[g,s]et_message_id.

	* gmime-parser.c (construct_headers): Parse out Message-Id
	headers.

	* gmime-message.c (g_mime_message_destroy): Free the message id.
	(g_mime_message_set_message_id): New function to set the message
	id on a message.
	(g_mime_message_set_message_id): New accessor function for
	message-ids.
	(create_header): Write out the Message-Id if and only if it
	exists.

2000-11-29  Jeffrey Stedfast  <fejj@helixcode.com>

	* README: Updated.

	* doc/gmime-sections.txt: Added new functions.

	* doc/html/*: Updated.

2000-11-29  Jeffrey Stedfast  <fejj@helixcode.com>

	* configure.in: Bumped the version to 0.2.0 because the API has
	changed a bit.

	* test-parser.c:
	* test-mime.c: Updated.

	* gmime-utils.c (BASE64_ENCODE_LEN):
	(QP_ENCODE_LEN): Macros for determining how much space we need to
	encode a chunk of data to that encoding (estimate is liberal).
	(encode_8bit_word): Use the macros to determine the length we
	need.

	* gmime-message.c (g_mime_message_get_body): Updated to reflect
	changes to gmime-part.